[gd_scene load_steps=16 format=2]

[ext_resource path="res://FontData/Title.tres" type="DynamicFont" id=1]
[ext_resource path="res://FontData/Text_menu.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/BlockWhite.svg" type="Texture" id=3]
[ext_resource path="res://Assets/nothing.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=7]
[ext_resource path="res://Assets/gear.png" type="Texture" id=8]
[ext_resource path="res://Assets/angle-left-solid.png" type="Texture" id=9]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Selection/Start/start:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Selection/Quit/quit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Selection/Mode/Normal/Normal:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Selection/Mode/Death/death:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:material:shader_param/circle_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect:material:shader_param/x_pos")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorRect:material:shader_param/y_pos")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.63 ]
}

[sub_resource type="Animation" id=9]
resource_name = "change_scene"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.05, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/x_pos")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/y_pos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.55 ]
}

[sub_resource type="Animation" id=1]
resource_name = "in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Selection/Start/LabelStart:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 0 ), Vector2( -230, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Selection/Quit/Labelquit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 100 ), Vector2( -170, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Selection/Start/start:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Selection/Quit/quit:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UI/Selection/Mode/Death/death:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UI/Selection/Mode/Normal/Normal:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorRect:material:shader_param/circle_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.05 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ColorRect:material:shader_param/x_pos")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ColorRect:material:shader_param/y_pos")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "mode"
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Selection/Start/LabelStart:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -230, 0 ), Vector2( 40, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Selection/Quit/Labelquit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -170, 100 ), Vector2( 40, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Selection/Mode/Normal/LabelModeNormal:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 0 ), Vector2( -330, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Selection/Mode/Death/LabelModeDeath:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 100 ), Vector2( -230, 100 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UI/Selection/Start/start:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UI/Selection/Quit/quit:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("UI/Selection/Mode/Normal/Normal:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("UI/Selection/Mode/Death/death:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Selection/Start/LabelStart:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -230, 0 ), Vector2( 40, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Selection/Quit/Labelquit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -170, 100 ), Vector2( 40, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/x_pos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:material:shader_param/y_pos")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:material:shader_param/circle_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.05, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "start"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.05, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/x_pos")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/y_pos")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.55 ]
}

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;
render_mode unshaded;
 
uniform float circle_size : hint_range(0.0, 1.05);
uniform float screen_width;
uniform float screen_height;
uniform float x_pos : hint_range(0.0, 1.0, 0.01);
uniform float y_pos :hint_range(0.0, 1.0, 0.01);
 
void fragment() {
	float ratio = screen_width / screen_height;
	float dist = distance(vec2(x_pos, y_pos), vec2(mix(0.5, UV.x, ratio), UV.y));
	COLOR.a = step(circle_size, dist);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 10 )
shader_param/circle_size = 0.0
shader_param/screen_width = 620.0
shader_param/screen_height = 1100.0
shader_param/x_pos = 0.0
shader_param/y_pos = 0.63

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.41425
margin_top = -1.41425
margin_right = 1.41425
margin_bottom = -1.41431
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BlockGreen" type="Sprite" parent="."]
modulate = Color( 0.682353, 0.909804, 0.505882, 1 )
position = Vector2( -297.414, 1394.41 )
scale = Vector2( 0.37, 0.37 )
texture = ExtResource( 3 )
offset = Vector2( 687.5, -670 )

[node name="BlockGreen2" type="Sprite" parent="."]
modulate = Color( 0.682353, 0.909804, 0.505882, 1 )
position = Vector2( 432.586, 857.414 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
offset = Vector2( 687.5, -670 )

[node name="BlockBlue" type="Sprite" parent="."]
modulate = Color( 0.509804, 0.717647, 0.909804, 1 )
position = Vector2( -208.414, 867.414 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
offset = Vector2( 687.5, -670 )

[node name="BlockBlue2" type="Sprite" parent="."]
modulate = Color( 0.509804, 0.717647, 0.909804, 1 )
position = Vector2( 503.586, 1333.41 )
scale = Vector2( 0.27, 0.27 )
texture = ExtResource( 3 )

[node name="BlockPink" type="Sprite" parent="."]
modulate = Color( 0.858824, 0.505882, 0.909804, 1 )
position = Vector2( 150.586, 1151.41 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
offset = Vector2( 687.5, -670 )

[node name="BlockPink2" type="Sprite" parent="."]
modulate = Color( 0.858824, 0.505882, 0.909804, 1 )
position = Vector2( -163.414, 1813.41 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )
offset = Vector2( 687.5, -670 )

[node name="Back" type="Control" parent="."]
anchor_left = 0.028
anchor_top = 0.028
anchor_right = 0.028
anchor_bottom = 0.042

[node name="Back" type="TouchScreenButton" parent="Back"]
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 9 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = -10.8647
margin_top = 105.702
margin_right = 740.135
margin_bottom = 530.702
rect_rotation = -15.0
rect_scale = Vector2( 0.9, 0.9 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 1 )
text = "Falling
	Blocks"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/change_scene = SubResource( 9 )
anims/in = SubResource( 1 )
anims/mode = SubResource( 2 )
anims/out = SubResource( 3 )
anims/start = SubResource( 4 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Selection" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -20.0
margin_bottom = 20.0

[node name="Start" type="Control" parent="UI/Selection"]

[node name="start" type="TouchScreenButton" parent="UI/Selection/Start"]
position = Vector2( -235.201, 21.1893 )
scale = Vector2( 2.51233, 1.50113 )
normal = ExtResource( 6 )

[node name="LabelStart" type="Label" parent="UI/Selection/Start"]
margin_left = -230.0
margin_right = -1.99994
margin_bottom = 133.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Start"

[node name="Quit" type="Control" parent="UI/Selection"]

[node name="quit" type="TouchScreenButton" parent="UI/Selection/Quit"]
position = Vector2( -168.724, 125.655 )
scale = Vector2( 2.11362, 1.33409 )
normal = ExtResource( 6 )

[node name="Labelquit" type="Label" parent="UI/Selection/Quit"]
margin_left = -170.0
margin_top = 100.0
margin_right = 26.0
margin_bottom = 233.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="Mode" type="Control" parent="UI/Selection"]

[node name="Normal" type="Node2D" parent="UI/Selection/Mode"]

[node name="LabelModeNormal" type="Label" parent="UI/Selection/Mode/Normal"]
margin_left = 40.0
margin_right = 399.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Normal"

[node name="Normal" type="TouchScreenButton" parent="UI/Selection/Mode/Normal"]
position = Vector2( -332.603, 25.0978 )
scale = Vector2( 3.77586, 1.50113 )
normal = ExtResource( 6 )

[node name="Death" type="Node2D" parent="UI/Selection/Mode"]

[node name="LabelModeDeath" type="Label" parent="UI/Selection/Mode/Death"]
margin_left = 40.0
margin_top = 100.0
margin_right = 313.0
margin_bottom = 233.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Death"

[node name="death" type="TouchScreenButton" parent="UI/Selection/Mode/Death"]
position = Vector2( -227.595, 127.607 )
scale = Vector2( 2.68345, 1.33409 )
normal = ExtResource( 6 )

[node name="settings" type="Control" parent="UI"]
anchor_left = 0.94
anchor_top = 0.035
anchor_right = 0.943
anchor_bottom = 0.056

[node name="gear" type="Sprite" parent="UI/settings"]
rotation = 0.174533
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 8 )

[node name="settings" type="TouchScreenButton" parent="UI/settings"]
position = Vector2( -52, -37 )
scale = Vector2( 0.90992, 1.3241 )
normal = ExtResource( 6 )
pressed = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_bottom = 8.0
color = Color( 0, 0, 0, 1 )

[connection signal="resized" from="." to="." method="_on_Main_resized"]
[connection signal="pressed" from="Back/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="UI/Selection/Start/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="UI/Selection/Quit/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Selection/Mode/Normal/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="UI/Selection/Mode/Death/death" to="." method="_on_death_pressed"]
[connection signal="pressed" from="UI/settings/settings" to="." method="_on_settings_pressed"]
